Temporary deleted project article, updated CV pdf

--- a/index.html
+++ b/index.html
@@ -110,23 +110,9 @@ Aktualnie poszukuję stażu bądź pracy, w której mogłabym rozwinąć swoje u
         </div>
         </section>
 </article>
-<article class="article projects">
-    <h2 class="projects__title title">Projekty</h2>
-    <h3 class="projects__desc desc">W tej sekcji znajdziesz moje projekty. Wszystkie są stworzone według własnego pomysłu.</h3>
-    <div class="projects__container">
-        <div class="projects__box"><img class="projects__image" src="./img/img-gen.PNG" alt=""><div class="projects__text"></div></div>
-        <div class="projects__box green"></div>
-        <div class="projects__box blue"></div>
-        <div class="projects__box yellow"></div>
-
-
-
-    </div>
-
-</article>
 <article class="article contact">
     <h2 class="contact__title title">Kontakt</h2>
-    <h3 class="contact__desc desc">Spodobało Ci się portfolio? Napisz do mnie. </h3>
+    <h3 class="contact__desc desc">Poszukujesz pracowniku bądź masz jakieś zlecenie? Napisz do mnie. </h3>
     <div class="contact__container">
     <ul class="contact__list">
         <li class="contact__item contact__item--tel">
